--- a/Learning_Github.ipynb
+++ b/Learning_Github.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Open Folder: Github Repos (This is where the cloned repo with sit)\n",
+    "#Open Folder in VSCode: Github Repos (This is where the cloned repo with sit)\n",
     "#In terminal, type:\n",
-    "    #git clone <repo url eg. https://github.com/chrisimpacts/Learning.git>\n",
+    "    #git clone [repo url eg. https://github.com/chrisimpacts/Learning.git]\n",
     "#Move files into folder"
    ]
   },
