Copying over DatabaseCreator

--- a/Learning_Github.ipynb
+++ b/Learning_Github.ipynb
@@ -21,6 +21,14 @@
    "outputs": [],
    "source": [
     "#Open Folder in VSCode: Github Repos (This is where the cloned repo with sit)\n",
+    "\n",
+    "#1\n",
+    "#Ctrl+Shift+P\n",
+    "#'Git: Clone'\n",
+    "#Sign in, select repo, select folder destination\n",
+    "\n",
+    "\n",
+    "#2\n",
     "#In terminal, type:\n",
     "    #git clone [repo url eg. https://github.com/chrisimpacts/Learning.git]\n",
     "#Move files into folder"
