--- a/Learning_Postgresql with FPL data.ipynb
+++ b/Learning_Postgresql with FPL data.ipynb
@@ -6,12 +6,72 @@
    "id": "95b1b4c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07b1f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from DatabaseCreator import DatabaseCreator\n",
+    "import CJDH_local_settings\n",
+    "\n",
+    "#Run Database Creator\n",
+    "if __name__ == \"__main__\":\n",
+    "    db_creator = DatabaseCreator(db_settings=CJDH_local_settings.local_settings['FPL_Points_Predictor'])\n",
+    "    fpl_engine = db_creator.get_engine_for(\"fpl_data_analysis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb4ffbaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_gw = 25\n",
+    "current_season = 20252026"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33fdb83a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view = db_creator.run_sql(f\"\"\"\n",
+    "SELECT *\n",
+    "                          FROM predictions\n",
+    "                          WHERE event = {current_gw}\n",
+    "AND season = {current_season}\n",
+    "    \n",
+    "\"\"\")\n",
+    "view"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
